<resources>
    <string name="app_name">Mifos Android Client</string>
    <string name="server_name_template">http://ci.mifos.org:8085/mifos</string>
    <string name="not_implemented_yet_message">To be implemented soon!</string>
    <string name="not_available">N/A</string>
    <string name="type_to_filter">Type to filter the list</string>
    <string name="feeId">Fee ID:&#160;</string>
    <string name="amount">Amount:&#160;</string>
    <string name="cause">Error cause:&#160;</string>
    <string name="exception.accounts.ApplicationException.CannotAdjust">The amount cannot be adjusted either because the status is not yet active or because a payment was received at the time of disbursement.</string>
    <string name="error.activity.not.allowed">Activity not allowed.</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_server_address">Please provide a Mifos server address:</string>
    <string name="dialog_login_title">Logging in</string>
    <string name="dialog_loading_message">Please wait...</string>
    <string name="dialog_checking_session">Checking user session</string>
    <string name="dialog_getting_customer_data">Getting customer data</string>
    <string name="dialog_getting_account_data">Getting account data</string>
    <string name="dialog_getting_transaction_history">Getting transaction history</string>
    <string name="dialog_getting_installment_details">Getting installment details</string>
    <string name="dialog_getting_customer_charges">Getting customer charges</string>
    <string name="dialog_getting_deposit_due_details">Getting deposit due details</string>
    <string name="dialog_getting_repayment_schedule">Getting repayment schedule</string>
    <string name="dialog_submitting_data">Submitting</string>
    <string name="toast_first_address_set">The Mifos server address has been set. You can change it later in the options menu.</string>
    <string name="toast_address_set">The Mifos server address has been changed.</string>
    <string name="toast_first_address_canceled">The Mifos server address has not been set. Please set it using the options menu.</string>
    <string name="toast_connection_error">
        There appears to be a network connection problem. Please make sure You are connected
        to the internet and the Mifos server address is correct.
    </string>
    <string name="toast_address_invalid">
        The server address You provided appears to be invalid. Please make sure it is correct and
        retry.
    </string>
    <string name="toast_customer_id_not_available">
        The customer identifier is not available, cannot download customer data.
    </string>
    <string name="toast_account_id_not_available">
        The account number is not available, cannot download account data.
    </string>
    <string name="menu_change_address">Change server address</string>
    <string name="menu_log_out">Log out</string>
    <string name="menu_synchronize">Synchronize</string>
    <string name="client_main_button_client_list">Browse customers</string>
    <string name="client_main_button_meetings_list">Upcoming meetings</string>
    <string name="client_main_button_collectionSheet">Enter collection sheet data</string>
    <string name="client_main_label">Welcome to Mifos\nAndroid client!</string>
    <string name="login_login_label">Username:</string>
    <string name="login_password_label">Password:</string>
    <string name="login_button">Log in</string>
    <string name="login_errors">The login or password You provided was incorrect. Please correct the values and retry.</string>
    <string name="login_header">Please log in:</string>
    <string name="centerslist_label">Choose a center:</string>
    <string name="centerslist_no_center">Customers assigned to the branch</string>
    <string name="centersList_clientsAssignedToBranch">Clients assigned to the branch</string>
    <string name="centersList_hint">Click on a center to go to its groups. Do a long click on a center to view its details.</string>
    <string name="centersList_no_centers_available">You are logged in as \'%s\', but it appears You have no customers assigned. </string>
    <string name="centersList_listItemLabel_withChildren"><b>+</b> %1$s (%2$d)</string>
    <string name="clientslist_label">Select a customer to view his details:</string>
    <string name="clientsList_hint">Click on a group to view its clients (if any). Do a long click on a group to view its details.</string>
    <string name="clientsList_no_customers_available">You are logged in as \'%s\', but it appears that You have no groups or clients assigned.</string>
    <string name="clientsList_listGroupLabel_withChildren">+ %1$s (%2$d)</string>
    <string name="customerDetails_tab_overview">Overview</string>
    <string name="customerDetails_tab_accounts">Accounts &#38; Charges</string>
    <string name="customerDetails_tab_additional">Additional Info</string>
    <string name="customerOverview_status_label">Status:&#160;</string>
    <string name="customerOverview_systemId_label">System ID:&#160;</string>
    <string name="customerOverview_performance_history_label">Performance History:</string>
    <string name="customerOverview_loanCycleNo_label">Loan Cycle #:&#160;</string>
    <string name="customerOverview_amountOfLastLoan_label">Amount of last Loan:&#160;</string>
    <string name="customerOverview_noOfActiveLoans_label"># of active Loans:&#160;</string>
    <string name="customerOverview_delinquentPortfolio_label">Delinquent Portfolio:&#160;</string>
    <string name="customerOverview_totalSavings_label">Total Savings:&#160;</string>
    <string name="customerOverview_meetingsAttended_label">Meetings Attended:&#160;</string>
    <string name="customerOverview_meetingsMissed_label">Meetings Missed:&#160;</string>
    <string name="customerOverview_loanCyclePerProduct_label">Loan Cycle per Product:&#160;</string>
    <string name="customerOverview_name_label">Client name:&#160;</string>
    <string name="accountDetails_chargesDetailsButton_label">Charges Details</string>
    <string name="accountDetails_applyChargeButton_label">Apply Charge</string>
    <string name="savingsAccountListItem_balance_label">Balance:&#160;</string>
    <string name="savingsAccountListItem_status_label">Status:&#160;</string>
    <string name="loanAccountListItem_status_label">Status:&#160;</string>
    <string name="loanAccountListItem_outstandingBalance_label">Outstanding balance:&#160;</string>
    <string name="loanAccountListItem_amountDue_label">Amount due:&#160;</string>
    <string name="loan_label">Loan Accounts</string>
    <string name="savings_label">Savings Accounts</string>
    <string name="charges_label">Client Charges:</string>
    <string name="closedSavingsLabel">Closed Savings Accounts</string>
    <string name="closedLoanLabel">Closed Loan Accounts</string>
    <string name="loanAccounts_amountDue_label">Amount due:&#160;</string>
    <string name="groupOverview_name_label">Group name:</string>
    <string name="groupOverview_noOfActiveClients_label"># of active Clients:&#160;</string>
    <string name="groupOverview_amountOfLastGroupLoan_label">Amount of last Group Loan:&#160;</string>
    <string name="groupOverview_averageIndividualLoanSize_label">Avg individual Loan size:&#160;</string>
    <string name="groupOverview_totalLoanPortfolio_label">Total Loan portfolio:&#160;</string>
    <string name="groupOverview_portfolioAtRisk_label">Portfolio at risk:&#160;</string>
    <string name="groupOverview_totalSavings_label">Total Savings:&#160;</string>
    <string name="groupOverview_loanCyclePerProduct_label">Loan Cycle per Product:&#160;</string>
    <string name="groupCharges_label">Group charges:</string>
    <string name="centerCharges_label">Center charges:</string>
    <string name="groupAdditional_approvalDate_label">Group approval date:&#160;</string>
    <string name="groupAdditional_recruitedBy_label">Recruited By:&#160;</string>
    <string name="groupAdditional_recentNotes_label">Recent Notes:&#160;</string>
    <string name="groupAdditional_GroupInformation_label">Group information </string>
    <string name="groupAdditional_ExternalID_label">External ID:&#160;</string>
    <string name="groupAdditional_Address_label">Address</string>
    <string name="centerOverview_name_label">Center name:</string>
    <string name="centerOverview_noOfActiveClients_label"># of active Clients:&#160;</string>
    <string name="centerOverview_noOfActiveGroups_label"># of active Groups:&#160;</string>
    <string name="centerOverview_totalLoanPortfolio_label">Total Loan portfolio:&#160;</string>
    <string name="centerOverview_totalSavings">Total Savings:&#160;</string>
    <string name="centerAdditional_centerInformation_label">Center information</string>
    <string name="centerAdditional_mfiJoining_label">MFI joining date:&#160;</string>
    <string name="centerAdditional_centerStart_label">Center start date:&#160;</string>
    <string name="centerAdditional_loanOfficer_name_label">Loan Officer:&#160;</string>
    <string name="centerAdditional_recentNotes_label">Recent Notes:&#160;</string>
    <string name="customerAdditional_mfiInformation_label">MFI Information:&#160;</string>
    <string name="customerAdditional_personalInformation_label">Personal Information:&#160;</string>
    <string name="accountTransaction_disburseLoan_label">Disburse Loan</string>
    <string name="accountTransaction_applyLoanAdjustment_label">Apply adjustment</string>
    <string name="repaymentScheduleItem_dueDate_label">Due date:&#160;</string>
    <string name="repaymentScheduleItem_paymentDate_label">Date paid:&#160;</string>
    <string name="repaymentScheduleItem_principal_label">Principal:&#160;</string>
    <string name="customerChargesDetails_accountSummary_label">Account summary</string>
    <string name="customerChargesDetails_upcomingCharges_label">Upcoming charges&#160;</string>
    <string name="customerChargesDetails_recentAccountActivity_label">Recent Account Activity</string>
    <string name="customerChargesDetails_recurringAccountFees_label">Recurring Account Fees</string>
    <string name="customerChargesDetails_amountDue_label">Amount Due:&#160;</string>
    <string name="customerChargesDetails_amountOverdue_label">Amount Overdue:&#160;</string>
    <string name="customerChargesDetails_total_label">Total:&#160;</string>
    <string name="customerChargesDetails_feeType_label">Fee Type:</string>
    <string name="customerChargesDetails_amount_label">Amount</string>
    <string name="customerChargesDetails_date_label">Date</string>
    <string name="customerChargesDetails_description_label">Description</string>
    <string name="customerChargesDetails_postedBy_label">Posted By</string>
    <string name="customerChargesDetails_recurringAccountFees_feeName_label">Fee Name</string>
    <string name="customerChargesDetails_recurringAccountFees_amount_label">Amount</string>
    <string name="customerChargesDetails_recurringAccountFees_recurrence_label">Recur Every</string>
    <string name="accountTransaction_applyChargesButton_header">Apply charges</string>
    <string name="accountTransaction_fullRepayLoanButton_header">Repay Loan</string>
    <string name="accountTransaction_repayLoanButton_header">Apply payment</string>
    <string name="no_operation_available">There is no available operation</string>
    <string name="pre_collectionSheet_header">Collection Sheet</string>
    <string name="pre_collectionSheet_transactionDate_label">Date of transaction :</string>
    <string name="pre_collectionSheet_formField_paymentMode_label">Mode of payment:</string>
    <string name="pre_collectionSheet_formField_receiptId_label">Receipt ID:</string>
    <string name="pre_collectionSheet_formField_receiptDate_label">Receipt date:</string>
    <string name="collectionSheetCustomer_save_button">Continue</string>
</resources>