<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        style="@style/Header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_main_label"
        />

    <Button
        android:id="@+id/view_clients_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_main_button_client_list"
        android:onClick="onClientListSelected"
        />

    <Button
        android:id="@+id/view_clients_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_main_button_meetings_list"
        android:onClick="onMeetingSelected"
        />

    <Button
        android:id="@+id/view_collectionSheetCenters_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_main_button_collectionSheet"
        android:onClick="onCollectionSheetsSelected"
        />

</LinearLayout>

