<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent">


        <Button
            android:id="@+id/accountLoan_repayLoan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountTransaction_repayLoanButton_header"
            android:onClick="onApplyLoanRepaySelected"
            />

        <Button
            android:id="@+id/accountLoan_applyCharge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@id/accountLoan_repayLoan"
            android:text="@string/accountTransaction_applyChargesButton_header"
            android:onClick="onLoanApplyChargeSelected"
            />

        <Button
            android:id="@+id/accountLoan_applyAdjustment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountLoan_applyCharge"
            android:text="@string/accountTransaction_applyLoanAdjustment_label"
            android:onClick="onApplyLoanAdjustmentSelected"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/accountLoan_fullRepayLoan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountLoan_applyAdjustment"
            android:text="@string/accountTransaction_fullRepayLoanButton_header"
            android:visibility="gone"
            android:onClick="onApplyFullLoanRepaySelected"
            />

        <Button
            android:id="@+id/accountLoan_disburseLoan"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountLoan_fullRepayLoan"
            android:text="@string/accountTransaction_disburseLoan_label"
            android:onClick="onDisburseLoanSelected"
            />

        <TextView
            style="@style/InfoBig"
            android:gravity="center"
            android:id="@+id/no_loan_operation"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:layout_below="@id/accountLoan_disburseLoan"
            android:text="@string/no_operation_available"
            />

        </RelativeLayout>
</ScrollView>