<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

        <TextView
            android:id="@+id/collectionSheet_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pre_collectionSheet_header"
            style="@style/Header"
            />
        <LinearLayout
            android:id="@+id/pre_collectionSheet_formFields"
            android:orientation="vertical"
            android:layout_below="@id/collectionSheet_header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Label"
                android:id="@+id/collectionSheet_formField_transactionDate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pre_collectionSheet_transactionDate_label"
                />
            <EditText
                android:id="@+id/collectionSheet_formField_transactionDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                style="@style/Label"
                android:id="@+id/collectionSheet_formField_transactionDate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pre_collectionSheet_formField_paymentMode_label"
                />
            <Spinner
                android:id="@+id/collectionSheet_spinner_paymentTypes"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                />
            <TextView
                style="@style/Label"
                android:id="@+id/collectionSheet_formField_receiptId_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pre_collectionSheet_formField_receiptId_label"
                />
            <EditText
                android:id="@+id/collectionSheet_formField_receiptId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                style="@style/Label"
                android:id="@+id/collectionSheet_formField_receiptDate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pre_collectionSheet_formField_receiptDate_label"
                />

            <EditText
                android:id="@+id/collectionSheet_formField_receiptDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onDateFieldClicked"
                />
        </LinearLayout>
            <Button
                android:id="@+id/collectionSheet_saveButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pre_collectionSheet_formFields"
                android:text="@string/collectionSheetCustomer_save_button"
                android:onClick="onContinueCollectionSheet"
            />
</RelativeLayout>