<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
        style="@style/Header"
        android:id="@+id/centers_list_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/centerslist_label"
        />

    <TextView
        style="@style/Info"
        android:id="@+id/centers_list_hint"
        android:layout_below="@id/centers_list_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/centersList_hint"
        />

    <EditText
        android:id="@+id/centers_list_filter_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centers_list_hint"
        android:hint="@string/type_to_filter"
        android:inputType="text"
        android:maxLines="1"
        />

    <ListView
        android:id="@+id/centers_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centers_list_filter_box"
        />

</RelativeLayout>
