<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
        style="@style/Header"
        android:id="@+id/clientslist_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clientslist_label"
        />

    <TextView
        style="@style/Info"
        android:id="@+id/clientsList_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clientslist_label"
        android:text="@string/clientsList_hint"
        />

    <EditText
        android:id="@+id/clientsList_filter_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clientsList_hint"
        android:hint="@string/type_to_filter"
        android:inputType="text"
        android:maxLines="1"
        />

    <ExpandableListView
        android:id="@+id/clientslist_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clientsList_filter_box"
        android:groupIndicator="@null"
        />

</RelativeLayout>