<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">




    <TextView
        style="@style/Header"
        android:id="@+id/repaymentSchedule_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/repaymentSchedule_label"
        />

    <TextView
        style="@style/Shifted"
        android:id="@+id/dueDate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repaymentSchedule_label"
        android:text="@string/repaymentScheduleItem_dueDate_label"
        />
    <TextView
        style="@style/Shifted"
        android:id="@+id/paymentDate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repaymentSchedule_label"
        android:layout_toRightOf="@id/dueDate_label"
        android:text="@string/repaymentScheduleItem_paymentDate_label"
        />
    <TextView
        style="@style/Shifted"
        android:id="@+id/principal_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/repaymentSchedule_label"
        android:layout_toRightOf="@id/paymentDate_label"
        android:text="@string/repaymentScheduleItem_principal_label"
        />

    <ListView
        android:id="@+id/repaymentSchedule_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/principal_label"
        />

</RelativeLayout>